@@ -1,2 +1,3 @@
 quick_search_text | SQLCatalog_makeQuickSearchQuery
 advanced_search_text | SQLCatalog_makeQuickSearchQuery
+full_text | SQLCatalog_makeFullTextQuery
