@@ -1,0 +1,1 @@
+erp5_mysql_innodb_catalog
