@@ -1,3 +1,6 @@
+2011-01-28 Ivan
+* Add site configurable 'full_text' scriptable key
+
 2010-11-08 Kazuhiko
 * support cataloging multiple subjects.
 * subject related tables are moved from erp5_ingestion_mysql_innodb_catalog.
